Bug 1043106 - StorageEvent should have the storageArea of the correct window, r=smaug